fixing image of me on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,7 @@ footer{
   .me{
     float:left;
     width:185px;
+    image-orientation: from-image;
   }
 
   .bioPara{
